src/test/ui/associated-types/cache/project-fn-ret-contravariant.ok.stderr
error: compilation successful
  --> $DIR/project-fn-ret-contravariant.rs:52:1
   |
LL | fn main() { }
   | ^^^^^^^^^^^^^

error: aborting due to previous error

